# agentic-coder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: seed_errors.json
data/benchmarks/dep_hallucination/: clean_js.js  clean_py.py  manifest.json  phantom_double.py  phantom_fake_ml.py  phantom_js_1.js  phantom_js_2.js  phantom_js_3.js  phantom_mixed_node.js  phantom_mixed_valid.py  phantom_npm_leftpadx.js  phantom_numpy_typo.py  phantom_only.py  phantom_py_1.py  phantom_py_2.py  phantom_py_3.py  phantom_py_4.py  phantom_py_5.py  phantom_requests_alt.py
data/benchmarks/security_suite/: command_injection.py  js_eval.js  (+13 more)
docker/: Dockerfile  Dockerfile.node  Dockerfile.playwright  docker-compose.yml  entrypoint-pw.sh
docker/csharp/: Dockerfile  run_code.sh
docker/java/: Dockerfile  run_code.sh
docker/python/: Dockerfile  run_code.py
examples/: sample_functions.js  sample_functions.py  sample_page.html
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  explanation.py  jest_test.py  router.py  ui_test.py  unit_test.py
src/core/: __init__.py  schemas.py
src/evaluation/: __init__.py  ablation.py  cost.py  models.py  runner.py
src/graph/: __init__.py  pipeline.py
src/rag/: __init__.py  error_retriever.py  vector_store.py
src/sandbox/: __init__.py  executor.py
src/utils/: __init__.py  logging.py
src/verification/: __init__.py  complexity.py  dependency.py  explanation_judge.py  js_sandbox.py  judge.py  models.py  sandbox.py  sast.py  ui_sandbox.py
tests/: __init__.py  test_evaluation.py  test_explanation.py  test_js_support.py  test_pipeline.py  test_rag.py  test_sandbox.py  test_schemas.py  test_ui_agent.py  test_verification.py
(+8 files in other folders)
